--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -55,9 +55,24 @@
     <Compile Include="Affixes\ITieredStatIntValueAffix.cs" />
     <Compile Include="Affixes\ITieredStatIntAffix.cs" />
     <Compile Include="Affixes\ITieredStatFloatAffix.cs" />
-    <Compile Include="Affixes\Prefixes\ArmorDefense.cs" />
-    <Compile Include="Affixes\Prefixes\ArmorMaxMana.cs" />
-    <Compile Include="Affixes\Prefixes\ArmorMaxLife.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorArmorPen.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorMeleeAttackSpeed.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorMoveSpeed.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorPotionDelay.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorReflect.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorLifeRegen.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorReceivedDamage.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorThrowingDamage.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorSummonDamage.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorMagicDamage.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorRangedDamage.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorMeleeDamage.cs" />
+    <Compile Include="Affixes\Prefixes\EquipMinionCount.cs" />
+    <Compile Include="Affixes\Prefixes\EquipDefense.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorCritDamage.cs" />
+    <Compile Include="Affixes\Prefixes\EquipMaxMana.cs" />
+    <Compile Include="Affixes\Prefixes\EquipMaxLife.cs" />
+    <Compile Include="Affixes\Prefixes\ArmorConsumeAmmo.cs" />
     <Compile Include="Affixes\Prefixes\WeaponDamagePerEnemyBuff.cs" />
     <Compile Include="Affixes\Prefixes\WeaponManasteal.cs" />
     <Compile Include="Affixes\Prefixes\WeaponLifesteal.cs" />
