Added accessory prefixes.

--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -55,10 +55,23 @@
     <Compile Include="Affixes\ITieredStatIntValueAffix.cs" />
     <Compile Include="Affixes\ITieredStatIntAffix.cs" />
     <Compile Include="Affixes\ITieredStatFloatAffix.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryMeleeAttackSpeed.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryToolSpeed.cs" />
+    <Compile Include="Affixes\Prefixes\AccessorySummonDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryThrowingDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryMagicDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryRangedDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryMeleeDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryCritChance.cs" />
     <Compile Include="Affixes\Prefixes\ArmorArmorPen.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryConsumeAmmo.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryCritDamage.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryLifeRegen.cs" />
     <Compile Include="Affixes\Prefixes\ArmorMeleeAttackSpeed.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryMoveSpeed.cs" />
     <Compile Include="Affixes\Prefixes\ArmorMoveSpeed.cs" />
     <Compile Include="Affixes\Prefixes\ArmorPotionDelay.cs" />
+    <Compile Include="Affixes\Prefixes\AccessoryReflect.cs" />
     <Compile Include="Affixes\Prefixes\ArmorReflect.cs" />
     <Compile Include="Affixes\Prefixes\ArmorLifeRegen.cs" />
     <Compile Include="Affixes\Prefixes\ArmorReceivedDamage.cs" />
