Added equip buff suffixes. Fixed affix player hooks.

--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -101,6 +101,19 @@
     <Compile Include="Affixes\Prefixes\WeaponSummonDamage.cs" />
     <Compile Include="Affixes\Prefixes\WeaponMagicDamage.cs" />
     <Compile Include="Affixes\Prefixes\WeaponRangedDamage.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffMining.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffWellFed.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffWaterwalking.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffShine.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffObsidianSkin.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffInvisibility.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffInferno.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffHunter.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffHeartreach.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffGravitation.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffFlipper.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffFeatherfalling.cs" />
+    <Compile Include="Affixes\Suffix\EquipBuffDangersense.cs" />
     <Compile Include="Affixes\Suffix\WeaponDebuffShadowflame.cs" />
     <Compile Include="Affixes\Suffix\WeaponDebuffFrostburn.cs" />
     <Compile Include="Affixes\Suffix\WeaponDebuffIgnite.cs" />
