--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Affixes\Affix.cs" />
     <Compile Include="Affixes\Prefixes\WeaponAttackSpeed.cs" />
     <Compile Include="Affixes\Prefixes\WeaponMeleeDamage.cs" />
+    <Compile Include="Items\ModifierForge.cs" />
+    <Compile Include="Items\ModifierFragment.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -143,6 +145,7 @@
     <Compile Include="PathOfModifiers.cs" />
     <Compile Include="PoMHelper.cs" />
     <Compile Include="PoMAffixController.cs" />
+    <Compile Include="PoMNPC.cs" />
     <Compile Include="PoMProjectile.cs" />
     <Compile Include="PoMItem.cs" />
     <Compile Include="PoMPlayer.cs" />
@@ -165,6 +168,9 @@
     <Compile Include="Rarities\ArmorUncommon.cs" />
     <Compile Include="Rarities\WeaponUncommon.cs" />
     <Compile Include="Rarities\Rarity.cs" />
+    <Compile Include="Tiles\ModifierForge.cs" />
+    <Compile Include="UI\ModifierForgeUI.cs" />
+    <Compile Include="UI\UIItemSlot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -182,6 +188,10 @@
     <Reference Include="Microsoft.Xna.Framework.Xact, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Xact\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Xact.dll</HintPath>
+    </Reference>
+    <Reference Include="ReLogic, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Desktop\tModLoader-0.10.1.3\references\ReLogic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="Terraria">
