--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -198,7 +198,9 @@
       <HintPath>..\..\..\..\..\..\Desktop\tModLoader-0.10.1.3\src\tModLoader\bin\x86\WindowsServerDebug\Terraria.exe</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Changelog.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"F:\Steam\steamapps\common\Terraria\tModLoaderServer.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
