--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -204,6 +204,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="build.txt" />
     <Content Include="Changelog.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
