--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Rarities\Rarity.cs" />
     <Compile Include="Tiles\ModifierForge.cs" />
     <Compile Include="UI\ModifierForgeUI.cs" />
+    <Compile Include="UI\UIPanelConditioned.cs" />
     <Compile Include="UI\UITextButton.cs" />
     <Compile Include="UI\UIPanelButton.cs" />
     <Compile Include="UI\UIItemSlot.cs" />
