--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -150,13 +150,14 @@
     <Compile Include="Maps\Map.cs" />
     <Compile Include="PoMDebug.cs" />
     <Compile Include="PoMNetMessage.cs" />
+    <Compile Include="PoMWorld.cs" />
     <Compile Include="Tiles\MapDevice.cs" />
     <Compile Include="Tiles\PoMTileEntity.cs" />
     <Compile Include="UI\MapDeviceUI.cs" />
     <Compile Include="Utilities\Bezier.cs" />
+    <Compile Include="Utilities\Extensions.cs" />
     <Compile Include="Utilities\Noise.cs" />
     <Compile Include="PoMDataLoader.cs" />
-    <Compile Include="PoMMapController.cs" />
     <Compile Include="Projectiles\FrostSpike.cs" />
     <Compile Include="Projectiles\ForceWave.cs" />
     <Compile Include="Projectiles\FireNova.cs" />
@@ -227,9 +228,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Xact\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Xact.dll</HintPath>
     </Reference>
-    <Reference Include="ReLogic, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Desktop\tModLoader-0.10.1.3\references\ReLogic.dll</HintPath>
+    <Reference Include="ReLogic">
+      <HintPath>D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.10.1.5\references\ReLogic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
