--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -212,6 +212,9 @@
     <Compile Include="UI\UIItemSlot.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11-beta4\references\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.dll</HintPath>
@@ -238,12 +241,11 @@
     <Content Include="Changelog.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.10.1.5\src\tModLoader\Terraria.csproj">
+    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11-beta4\src\tModLoader\Terraria.csproj">
       <Project>{3996d5fa-6e59-4fe4-9f2b-40eeef9645d5}</Project>
       <Name>Terraria</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"F:\Steam\steamapps\common\Terraria\tModLoaderServer.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
