--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -1,277 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\references\tModLoader.targets" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5CEA514-EB87-43D6-84DA-5FEE400D7598}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PathOfModifiers</RootNamespace>
     <AssemblyName>PathOfModifiers</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <TargetFramework>net45</TargetFramework>
     <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ServerDebug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\ServerDebug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ServerDebug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\ServerDebug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="AffixesNPC\TieredStatAffixHelper.cs" />
-    <Compile Include="AffixHelpers.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryMeleeAttackSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryToolSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessorySummonDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryThrowingDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryMagicDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryRangedDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryMeleeDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryCritChance.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorArmorPen.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryConsumeAmmo.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryCritDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryLifeRegen.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorMeleeAttackSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryMoveSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorMoveSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorPotionDelay.cs" />
-    <Compile Include="AffixesItem\Prefixes\AccessoryReflect.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorReflect.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorLifeRegen.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorReceivedDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorThrowingDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorSummonDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorMagicDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorRangedDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorMeleeDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\EquipMinionCount.cs" />
-    <Compile Include="AffixesItem\Prefixes\EquipDefense.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorCritDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\EquipMaxMana.cs" />
-    <Compile Include="AffixesItem\Prefixes\EquipMaxLife.cs" />
-    <Compile Include="AffixesItem\Prefixes\ArmorConsumeAmmo.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponDamagePerEnemyBuff.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponMeleeLifesteal.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponManasteal.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponLifesteal.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponKnockbackPerLife.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponAttackSpeedPerLife.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponCritChance.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponConsumeAmmo.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponDamagePerPlayerBuff.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponManaCost.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponSize.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponKnockback.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponThrowingDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponSummonDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponMagicDamage.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponRangedDamage.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffMining.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffWellFed.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffWaterwalking.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffShine.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffObsidianSkin.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffInvisibility.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffInferno.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffHunter.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffHeartreach.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffGravitation.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffFlipper.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffFeatherfalling.cs" />
-    <Compile Include="AffixesItem\Suffixes\EquipBuffDangersense.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponOnHitFireball.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponOnKillFrostSpikes.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponOnHitForceWave.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponOnHitFireNova.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponFireballRelease.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffShadowflame.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffFrostburn.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffIgnite.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffDDD.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponMultipleProjectiles.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffVenom.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffPoison.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffMidas.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffIchor.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffCursedInferno.cs" />
-    <Compile Include="AffixesItem\Suffixes\WeaponDebuffConfuse.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponDamage.cs" />
-    <Compile Include="AffixesItem\TieredStatAffixHelper.cs" />
-    <Compile Include="AffixesItem\Affix.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponAttackSpeed.cs" />
-    <Compile Include="AffixesItem\Prefixes\WeaponMeleeDamage.cs" />
-    <Compile Include="AffixesNPC\Prefixes\MaxLife.cs" />
-    <Compile Include="Buffs\DamageDoTDebuff.cs" />
-    <Compile Include="Items\MapBorder.cs" />
-    <Compile Include="Items\Map.cs" />
-    <Compile Include="Items\MapDevice.cs" />
-    <Compile Include="Maps\Generators\LayeredSurfaceCaves.cs" />
-    <Compile Include="Maps\Generators\Generator.cs" />
-    <Compile Include="Maps\Plains.cs" />
-    <Compile Include="Maps\Map.cs" />
-    <Compile Include="AffixesNPC\Affix.cs" />
-    <Compile Include="PoMDebug.cs" />
-    <Compile Include="PoMNetMessage.cs" />
-    <Compile Include="PoMWorld.cs" />
-    <Compile Include="Rarities\NPCNone.cs" />
-    <Compile Include="Rarities\NPCCommon.cs" />
-    <Compile Include="Rarities\RarirtyNPC.cs" />
-    <Compile Include="Tiles\MapBorder.cs" />
-    <Compile Include="Tiles\MapDevice.cs" />
-    <Compile Include="Tiles\PoMTileEntity.cs" />
-    <Compile Include="UI\MapDeviceUI.cs" />
-    <Compile Include="Utilities\Bezier.cs" />
-    <Compile Include="Utilities\Extensions.cs" />
-    <Compile Include="Utilities\Noise.cs" />
-    <Compile Include="PoMDataLoader.cs" />
-    <Compile Include="Projectiles\FrostSpike.cs" />
-    <Compile Include="Projectiles\ForceWave.cs" />
-    <Compile Include="Projectiles\FireNova.cs" />
-    <Compile Include="Projectiles\Fireball.cs" />
-    <Compile Include="Items\ModifierForge.cs" />
-    <Compile Include="Items\ModifierFragment.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="PathOfModifiers.cs" />
-    <Compile Include="PoMHelper.cs" />
-    <Compile Include="PoMAffixController.cs" />
-    <Compile Include="PoMNPC.cs" />
-    <Compile Include="PoMProjectile.cs" />
-    <Compile Include="PoMItem.cs" />
-    <Compile Include="PoMPlayer.cs" />
-    <Compile Include="PoMPrefix.cs" />
-    <Compile Include="Projectiles\INonTriggerringProjectile.cs" />
-    <Compile Include="Rarities\AccessoryCommon.cs" />
-    <Compile Include="Rarities\ArmorCommon.cs" />
-    <Compile Include="Rarities\AccessoryEpic.cs" />
-    <Compile Include="Rarities\ArmorEpic.cs" />
-    <Compile Include="Rarities\AccessoryLegendary.cs" />
-    <Compile Include="Rarities\AccessoryRare.cs" />
-    <Compile Include="Rarities\AccessoryUncommon.cs" />
-    <Compile Include="Rarities\RarityHelper.cs" />
-    <Compile Include="Rarities\MapCommon.cs" />
-    <Compile Include="Rarities\WeaponEpic.cs" />
-    <Compile Include="Rarities\ArmorLegendary.cs" />
-    <Compile Include="Rarities\WeaponLegendary.cs" />
-    <Compile Include="Rarities\ArmorRare.cs" />
-    <Compile Include="Rarities\WeaponRare.cs" />
-    <Compile Include="Rarities\ItemNone.cs" />
-    <Compile Include="Rarities\WeaponCommon.cs" />
-    <Compile Include="Rarities\ArmorUncommon.cs" />
-    <Compile Include="Rarities\WeaponUncommon.cs" />
-    <Compile Include="Rarities\RarirtyItem.cs" />
-    <Compile Include="Tiles\ModifierForge.cs" />
-    <Compile Include="UI\ModifierForgeUI.cs" />
-    <Compile Include="UI\UIPanelConditioned.cs" />
-    <Compile Include="UI\UITextButton.cs" />
-    <Compile Include="UI\UIPanelButton.cs" />
-    <Compile Include="UI\UIItemSlot.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11-beta4\references\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Game\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Graphics\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Graphics.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Xact, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_32\Microsoft.Xna.Framework.Xact\v4.0_4.0.0.0__842cf8be1de50553\Microsoft.Xna.Framework.Xact.dll</HintPath>
-    </Reference>
-    <Reference Include="ReLogic">
-      <HintPath>D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.10.1.5\references\ReLogic.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="build.txt" />
-    <Content Include="Changelog.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11-beta4\src\tModLoader\Terraria.csproj">
-      <Project>{3996d5fa-6e59-4fe4-9f2b-40eeef9645d5}</Project>
-      <Name>Terraria</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>"F:\Steam\steamapps\common\Terraria\tModLoaderServer.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
-  </PropertyGroup>
+  <Target Name="BuildMod" AfterTargets="Build">
+    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
+  </Target>
 </Project>
