Changed project targets file to reference the TML source.

--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\references\tModLoader.targets" />
+  <Import Project="..\..\references\tModLoaderDev.targets" />
   <PropertyGroup>
     <AssemblyName>PathOfModifiers</AssemblyName>
     <TargetFramework>net45</TargetFramework>
@@ -13,4 +13,7 @@
   <Target Name="BuildMod" AfterTargets="Build">
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
+  <ItemGroup>
+    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11.6.2\src\tModLoader\Terraria.csproj" />
+  </ItemGroup>
 </Project>
