--- a/PathOfModifiers.csproj
+++ b/PathOfModifiers.csproj
@@ -5,15 +5,18 @@
     <AssemblyName>PathOfModifiers</AssemblyName>
     <TargetFramework>net45</TargetFramework>
     <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <Target Name="BuildMod" AfterTargets="Build">
-    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
+    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define &quot;$(DefineConstants)&quot; -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
-    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader-0.11.6.2\src\tModLoader\Terraria.csproj" />
+    <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="D:\SSD WINDOWS\Documents\Projects\Terraria\tModLoader\src\tModLoader\Terraria.csproj" />
   </ItemGroup>
 </Project>
